# factor-eco

./: README.md
app/: .gitignore  README.md  cookies.txt  pyproject.toml  setup_demo.sh
app/carts/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
app/carts/management/: __init__.py
app/carts/management/commands/: __init__.py  cleanup_carts.py
app/carts/migrations/: 0001_initial.py  0002_cart_unique_active_cart_per_user_type.py
app/core/: settings.py  urls.py
app/orders/: admin.py  models.py  serializers.py  urls.py  views.py
app/orders/migrations/: 0001_initial.py
app/products/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
app/products/management/commands/: ensure_base_products.py
app/products/migrations/: 0001_initial.py
app/promotions/: admin.py  middleware.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
app/promotions/management/commands/: create_base_promotions.py
app/promotions/migrations/: 0001_initial.py  0002_specialdatepromotion_discount_percentage.py  0003_specialdatepromotion_discount_amount.py  0004_remove_specialdatepromotion_discount_percentage.py
app/session/: serializers.py  urls.py  views.py
app/users/: admin.py  models.py  serializers.py  urls.py  views.py
app/users/management/commands/: create_base_users.py
app/users/migrations/: 0001_initial.py
web/: .eslintignore  .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  (+5 more)
(+56 files in other folders)
