[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Federico <fgc_castro@live.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.3"
djangorestframework = "^3.15.2"
drf-spectacular = "^0.28.0"
django-cors-headers = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
